--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-*.class
+# IntelliJ
+.idea/
+**/*.iml
+**/overlays
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Eclipse
+**/.project
+**/.classpath
+**/.settings
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Maven
+**/target
